feat:footer links and tidy up

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -74,9 +74,18 @@
 
         <div id="progress-box" style="display: none;">
             <div class="loading-spinner"></div>
-            <div id="status-text">Downloading media files...</div>
+            <div id="status-text">Downloading files...</div>
+        </div>
+
+        <div class="footer-content">
+            <span>Built by </span>
+            <a href="https://github.com/McDevStudios" target="_blank">McDevStudios</a>
+            <span class="separator">|</span>
+            <a href="https://github.com/McDevStudios/Scrape-Reddit" target="_blank">View on GitHub</a>
         </div>
     </div>
+
+
 
     <script>
         let isProcessing = false;
