feat: documentation and rename

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reddit Media Scraper</title>
+    <title>Scrape Reddit</title>
     <link rel="stylesheet" href="{{ url_for('static', path='/styles.css') }}">
 </head>
 <body>
     <div class="container">
-        <h1>Reddit Media Scraper</h1>
+        <h1>Scrape Reddit</h1>
         <div id="error-message" class="error-box" style="display: none;">
             <p class="error-text"></p>
         </div>
